--- a/oolab/build.gradle
+++ b/oolab/build.gradle
@@ -28,6 +28,7 @@ javafx {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
 
 test {
